syntax = "proto3";
package minecpp.proto.event.clientbound.v1;

import "google/protobuf/any.proto";
import "minecpp/proto/common/v1/Common.proto";
import "minecpp/proto/player/v1/Id.proto";
import "minecpp/proto/player/v1/Player.proto";
import "minecpp/proto/entity/v1/Entity.proto";

message Event {
  google.protobuf.Any payload = 1;
  oneof recipient {
    RecipientSinglePlayer single_player = 2;
    RecipientMultiplePlayers multiple_players = 3;
    RecipientAllPlayers all_players = 4;
    RecipientExcluding excluding = 5;
  }
}

message RecipientSinglePlayer {
  player.v1.PlayerId player_id = 1;
}

message RecipientMultiplePlayers {
  repeated player.v1.PlayerId player_ids = 1;
}

message RecipientAllPlayers {
}

message RecipientExcluding {
  player.v1.PlayerId player_id = 1;
}

message AddPlayer {
  player.v1.PlayerId player_id = 1;
  string name = 2;
  common.v1.GameMode game_mode = 3;
  uint32 ping = 4;
}

message SpawnPlayer {
  player.v1.PlayerId player_id = 1;
  uint32 entity_id = 2;
  entity.v1.Position position = 3;
  entity.v1.Rotation rotation = 4;
}

message EntityMove {
  player.v1.PlayerId player_id = 1;
  uint32 entity_id = 2;
  entity.v1.Movement movement = 3;
  entity.v1.Rotation rotation = 4;
}

message EntityLook {
  player.v1.PlayerId player_id = 1;
  uint32 entity_id = 2;
  entity.v1.Rotation rotation = 3;
}

message PlayerPositionRotation {
}

message Chat {
  string message = 1;
  int32 type = 2;
}

message RemovePlayer {
  player.v1.PlayerId player_id = 1;
  uint32 entity_id = 2;
}

message UpdateBlock {
  uint64 block_position = 1;
  uint32 state = 2;
}

message AnimateHand {
  player.v1.PlayerId player_id = 1;
  uint32 entity_id = 2;
  uint32 hand = 3;
}

message AcknowledgeBlockChange {
  int32 sequence_id = 1;
}

message LoadTerrain {
  common.v1.ChunkPosition central_chunk = 1;
  repeated common.v1.ChunkPosition coords = 2;
}

message TransferPlayer {
  uint64 engine_instance_id = 2;
}

message UpdatePlayerAbilities {
  player.v1.PlayerId player_id = 1;
  bool invulnerable = 2;
  bool is_flying = 3;
  bool allow_flying = 4;
  bool creative_mode = 5;
  float walk_speed = 7;
  float fly_speed = 8;
}

message UnloadChunk {
  player.v1.PlayerId player_id = 1;
  common.v1.ChunkPosition chunk_position = 2;
}

message PlayerList {
  repeated player.v1.Status list = 1;
}

message EntityList {
  repeated entity.v1.Entity list = 1;
}

message AcceptPlayer {
  common.v1.Gameplay gameplay = 1;
  player.v1.Player player = 2;
}

message DenyPlayer {
  string denial_reason = 1;
}

message SetInventorySlot {
  player.v1.Slot slot = 1;
}